# actix_web_api

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  init_data.sql  init_tables.sql
src/: main.rs
src/features/products/: mod.rs  product_model.rs  products_controller.rs
src/utils/: common_dto.rs
