[package]
name = "actix_web_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4" }
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.3"
log = "0.4.21"
serde = { version = "1.0.203", features = ["std", "derive"] }
strum = { version = "0.26.2", features = ["std", "derive"] }
